# nifti_rustlib

./: .TODOLIST.md  .gitignore  Cargo.toml  README.md
nifti2/: Cargo.toml
niftilib/: Cargo.toml  Notes.md
niftilib/src/: lib.rs  nifti1.rs  nifti1_io.rs  nifti1_test.rs  nifti1_tools.rs
src/: lib.rs  main_test.rs
znzlib/: Cargo.toml
znzlib/src/: lib.rs  znzlib.rs
