[package]
authors = ["Chengran Li"]
description = "Rust NIFTI library"
readme = "README.md"
name = "nifti_rslib"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "main_test"
path = "src/main_test.rs"

[workspace]
members = [
    "nifti2",
    "niftilib",
    "znzlib",
]

[lib]
name = "nifti_rslib"
path = "src/lib.rs"

[dependencies]
niftilib = { path = "niftilib" }
nifti2 = { path = "nifti2" }
znzlib = { path = "znzlib" }
